src/test/ui/feature-gates/feature-gate-impl_header_lifetime_elision.rs
#![allow(warnings)]

trait MyTrait<'a> { }

impl<'a> MyTrait<'a> for &u32 { }
//~^ ERROR missing lifetime specifier

impl<'a> MyTrait<'_> for &'a f32 { }
//~^ ERROR missing lifetime specifier

fn main() {}
